# Antik

./: .gitignore  CMakeLists.txt  CSocket.cpp  FTPStandaloneTests.cpp  readme.md
classes/: CApprise.cpp  CApprise.hpp  CCurl.cpp  CFTP.cpp  CFTP.hpp  CFile.cpp  CFileApprise.cpp  CFileApprise.hpp  CFileMIME.cpp  CFileMIME.hpp  CFileTask.cpp  CFileTask.hpp  CFileZIP.cpp  CFileZIP.hpp  CFileZIPIO.cpp  CFileZIPIO.hpp  CIMAP.cpp  CIMAP.hpp  CIMAPBodyStruct.cpp  CIMAPBodyStruct.hpp  CIMAPParse.cpp  CIMAPParse.hpp  CLogger.cpp  CLogger.hpp  CMIME.cpp  CMIME.hpp  CMailIMAP.cpp  CMailIMAP.hpp  CMailIMAPBodyStruct.cpp  CMailIMAPBodyStruct.hpp  CMailIMAPDecode.cpp  CMailIMAPDecode.hpp  CMailIMAPParse.cpp  CMailIMAPParse.hpp  CMailSMTP.cpp  CMailSMTP.hpp  CMailSend.cpp  CMailSend.hpp  CPath.cpp  CRedirect.cpp  (+19 more)
classes/implementation/: CFileEventNotifier.cpp  CFileEventNotifier.hpp  IFileEventNotifier.hpp
classes/tests/: CFileTests.cpp
examples/: ArchiveFolder.cpp  ArchiveMailBox.cpp  CMakeLists.txt  DownloadAllAttachments.cpp  ExtractToFolder.cpp  FTPBackup.cpp  FTPRestore.cpp  FTPSync.cpp  FileWatcher.cpp  IMAPCommandTerminal.cpp  SCPBackup.cpp  SCPRestore.cpp  SFTPBackup.cpp  SFTPRestore.cpp  SMTPSendMail.cpp  SSHTest (copy).cpp  WaitForMailBoxEvent.cpp  ZIPArchiveInfo.cpp
include/: CApprise.hpp  CCurl.hpp  CFTP.hpp  CFile.hpp  CIMAP.hpp  CIMAPBodyStruct.hpp  CIMAPParse.hpp  CLogger.hpp  CMIME.hpp  CPath.hpp  CRedirect.hpp  CSCP.hpp  CSFTP.hpp  CSMTP.hpp  CSSHChannel.hpp  CSSHSession.hpp  CSocket.hpp  CTask.hpp  CZIP.hpp  CZIPIO.hpp  CommonAntik.hpp  CommonUtil.hpp  FTPUtil.hpp  HOST.hpp  IApprise.hpp  SCPUtil.hpp  SFTPUtil.hpp  SSHChannelUtil.hpp  SSHSessionUtil.hpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
tests/: CAppriseTests.cpp  CFileAppriseTests.cpp  CFileTaskClassTests.cpp  CFileTests.cpp  CIMAPParseTests.cpp  CMailIMAPParseTests.cpp  CMailSMTPTests.cpp  CMakeLists.txt  CPathTests.cpp  CSMTPTests.cpp  CTaskTests.cpp  FTPStandaloneTests.cpp  ITCApprise.cpp  ITCFTP.cpp  TCApprise.cpp  TCFile.cpp  TCIMAPParse.cpp  TCPath.cpp  TCSMTP.cpp  TCTask.cpp  UTCApprise.cpp  UTCFile.cpp  UTCIMAPParse.cpp  UTCPath.cpp  UTCSMTP.cpp  UTCTask.cpp
utility/: CommonUtil.hpp  FTPUtil.cpp  FTPUtil.hpp  SCPUtil.cpp  SCPUtil.hpp  SFTPUtil.cpp  SFTPUtil.hpp  SSHChannelUtil.cpp  SSHChannelUtil.hpp  SSHSessionUtil.cpp  SSHSessionUtil.hpp
